tests/cases/control-flow/errors/for-generic-into-iterator-result-not-iterator.ari
struct Bag[T] {
  value: T,
}

impl[T] IntoIterator[T] for Bag[T] {
  fn into_iter(self) -> T {
    self.value
  }
}

fn main() -> i64 {
  let bag = Bag { value: 1 };
  for value in bag {
    return value;
  }
  return 0;
}
